# mapping_robustness_boundaries__20260702_163204_3ca16fc0

./: .gitignore  .resource_finder_complete  README.md  REPORT.md  download_papers.py  literature_review.md  planning.md  pyproject.toml  resources.md  search_papers.py  search_papers2.py
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md  catalog.json
results/: cross_mode_correlation.csv  encoding_judged.jsonl  judge_validation.json  maxintensity_rate_table.csv  metrics.json  raw_responses.jsonl  robustness_table.csv  threshold_table.csv
src/: analyze.py  interventions.py  judge_encoding.py  prompts.py  run_experiment.py  scoring.py  validate_judge.py
